force-app/main/default/objects/Positions_Held__c/Positions_Held__c.object-meta.xml
<CustomObject>
    <label>Positions Held</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positions Held</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>