force-app/main/default/objects/Positions_Held__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <label>Date To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>