force-app/main/default/objects/Positions_Held__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>