force-app/main/default/objects/Positions_Held__c/fields/Organisations__c.field-meta.xml
<CustomField>
    <fullName>Organisations__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>please include department if relevant</inlineHelpText>
    <label>Organisations</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Positions Held</relationshipLabel>
    <relationshipName>Positions_Held</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>