force-app/main/default/objects/Positions_Held__c/fields/Principle_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Principle_Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principle Investigator</label>
    <referenceTo>Investigator__c</referenceTo>
    <relationshipLabel>Positions Held</relationshipLabel>
    <relationshipName>Positions_Held</relationshipName>
    <type>Lookup</type>
</CustomField>