force-app/main/default/objects/Positions_Held__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <label>Supervisor&apos;</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>