force-app/main/default/objects/Positions_Held__c/validationRules/End_date_should_greater_then_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_should_greater_then_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>Date_From__c &gt;= Date_To__c</errorConditionFormula>
    <errorDisplayField>Date_To__c</errorDisplayField>
    <errorMessage>End should be greater then start date.</errorMessage>
</ValidationRule>